--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_gifimage: ^1.0.1
+  intl: ^0.16.1
   flutter:
     sdk: flutter
-  intl: ^0.16.1
   # flutter_material_pickers: ^1.9.2
 
 
